--- a/templates/post_page.html
+++ b/templates/post_page.html
@@ -9,7 +9,7 @@
 <body>
   <body style="margin:0; font-family:Segoe UI, sans-serif; background-color:#f5f5f5;">
   <header style="background:#6a0f0f; padding:1rem; color:white; text-align:center;">
-    <h1 id="post-title" style="margin:0;">Post</h1>
+    <h1 id="post-title" style="margin:0;">{%POST_SECTION%}</h1>
     <a href="/node-blog/sports/" class="btn" style="color:white; text-decoration:underline; display:block; margin-top:0.5rem;">👈 Back</a>
   </header>
   <main style="padding:1rem; max-width:800px; margin:auto;">
